# dotfiles

./: .gitignore  COPYING  README.md  extra-builtins.nix  flake.nix  lib.nix  nixos-rebuild.py  overlays.nix  postpush.sh  prepush.sh  private.nix.sample  push.sh  update.sh
home/: flake.nix  nvfetcher.toml  overlays.nix  private.nix  private.nix.sample
home/_sources/: generated.json  generated.nix
home/common/: firefox.nix  fish.nix  general.nix  gui.nix  helix.nix  home-daemon.nix  i3-sway.nix  kakoune.nix  nvim.nix  options.nix  sway.patch  terminal.nix  vim.nix  waybar.css  waybar.nix  zsh.nix
home/home-daemon/: Cargo.toml  default.nix  shell.nix
home/home-daemon/src/: main.rs
home/hosts/: ereader.nix  nixmsi.nix  phone.nix  remote.nix
home/modules/: firefox.nix  fish.nix  general.nix  gui.nix  helix.nix  i3-sway.nix  kakoune.nix  nvim.nix  options.nix  sway.patch  terminal.nix  waybar.css  waybar.nix  zsh.nix
home/pkgs/: default.nix  ghidra-stdcall.patch
home/rofi-steam-game-list/: default.nix
pkgs/: ccache.nix  chompjs.nix  default.nix  gimp.nix  looking-glass.patch  maubot.nix  mt7986-default-bootcmd.patch  nix-plugins-fix.patch  nix-plugins-overlay.nix  nvfetcher.toml  pineapplebot.nix  qemu_7.nix  qemu_virtiofsd.nix  rename-nix-plugin-files.patch  scanservjs.nix
pkgs/_sources/: generated.json  generated.nix
pkgs/buffyboard/: default.nix
pkgs/certspotter/: configurable-sendmail.patch  default.nix
pkgs/cthulock/: default.nix
pkgs/firefox-addons/: addons.json  (+2 more)
system/: README.md  flake.nix  private.nix.sample  private.sample.nix
(+214 files in other folders)
